--- a/Widget.css
+++ b/Widget.css
@@ -5,3 +5,15 @@ body {
 div {
 	background-color: #FFFF00;
 }
+
+p {
+	background-color: #FFFF00;
+}
+
+.main {
+	background-color: #FFFF00;
+}
+
+#main {
+	background-color: #FFFF00;
+}
